# rustbot

./: .token  Cargo.toml  README.md
src/: bot.rs  events.rs  main.rs  ollama.rs  utils.rs
src/commands/: help.rs  mod.rs  ping.rs
src/commands/music/: join.rs  leave.rs  mod.rs  pause.rs  play.rs  resume.rs  skip.rs  volume.rs
