[package]
name = "rustbot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bincode = { version = "2.0.1", features = ["serde"] }
ollama-rs = "0.3.2"
poise = "0.6.1"
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serenity = "0.12.4"
songbird = { version = "0.5.0", features = ["builtin-queue", "driver"] }
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "alac"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
uuid = "1.18.0"
